# claude-meter

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/skills/sentry-stats/: SKILL.md
.claude/skills/sentry-stats/: SKILL.md
assets/: AppIcon.icns
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
scripts/: _d.py  build-app.sh  build-icons.sh  release.sh
src/: api.rs  browser.rs  cookies.rs  format.rs  keychain.rs  lib.rs  main.rs  models.rs  oauth.rs
